--- a/public/site/css/main.css
+++ b/public/site/css/main.css
@@ -27,7 +27,7 @@
 .quem-somos{
     font-family: 'VotorantimSansBlack';
     padding-top: 50px;
-    color: #0000be;
+    color: #fff;
 }
 
 
@@ -36,14 +36,33 @@
 .subtitulo-quem-somos{
     font-family: 'VotorantimSansLight';
     font-weight: bold;
-    color: #000;
-    font-size: 16px;
+    color: #fff;
+    font-size: 22px;
+}
+
+.subtitulo-indice{
+    font-family: 'VotorantimSansLight';
+    font-weight: bold;
+    color: #fff;
+    font-size: 22px;
+}
+
+.area-sistema{
+  background-color: #ff6f0d;
+}
+
+.desc-sistema{
+    font-family: 'VotorantimSansRegular';
+    font-size: 22px;
+    line-height: 1.3em;
+    margin-bottom: 50px;
+    color: #fff;
 }
 
 .divisao{
-    height: 5px;
+    height: 3px;
     width: 48%;
-    background-color: #b4dc31;
+    background-color: #ff6f0d;
 }
 
 .divisao-2{
@@ -57,18 +76,20 @@
     color: #fff;
     text-align: left;
     margin-top: 20px;
+    width: 70%;
+    font-size: 14pt;
     font-weight: bold;
 }
 
 .btn-ivm{
     font-family: 'VotorantimSans';
-    background-color: #ff6f0d;
-    width: 20%;
-    margin-top:-100px;
-    margin-left: 40%;
+    background-color:#fff;
+    width: 100%;
+    margin-left: 10%;
     font-size: 20px;
+    margin-top: 80px;
     position: absolute;
-    color: #fff;
+    color: #ff6f0d;
 }
 
 .btn-edital{
@@ -77,18 +98,22 @@
     text-align: left;
     margin-top: 20px;
     font-weight: bold;
-    width: 45%;
+    width: 60%;
     text-align: center;
 }
 
 .btn-material{
     background-color: #0000be;
     color: #fff;
-    text-align: left;
     margin-top: 20px;
     font-weight: bold;
     width: 45%;
+    text-transform: none!important;
     text-align: center;
+}
+
+.bp{
+    width: 60%;
 }
 
 .btn-leia-mais{
@@ -99,7 +124,8 @@
     font-weight: bold;
 }
 
-.btn-sobre-votorantim:hover,.btn-edital:hover,.btn-material:hover, .todas-noticias:hover,.btn-leia-mais:hover,.btn-mais-webinar:hover{
+.btn-sobre-votorantim:hover,.btn-inscreva-webinar:hover,
+.btn-edital:hover,.btn-material:hover, .todas-noticias:hover,.btn-leia-mais:hover,.btn-mais-webinar:hover{
     color: #fff;
 }
 
@@ -181,6 +207,11 @@
     text-transform: uppercase;
 }
 
+.sobre-iniciativa{
+   background-color: #de1754;
+}
+
+
 .data{
     font-family: 'VotorantimSansBlack';
     color: #fff;
@@ -229,10 +260,14 @@
 .btn-mais-webinar{
     background-color: #e54576;
     color: #fff;
-    text-align: left;
-    margin-top: 20px;
-    font-weight: bold;
-    margin: 30px auto;
+   font-weight: bold;
+    margin: 30px 25%;
+    padding: 10px;
+}
+.btn-inscreva-webinar{
+    background-color: #e54576;
+    color: #fff;
+   font-weight: bold;
     padding: 10px;
 }
 
@@ -267,10 +302,9 @@
 
 .divisao-4{
     height: 5px;
-    width: 10%;
-    margin:0 auto;
+    width: 30%;
     background-color: #b4dc31;
-    margin: 5px auto;
+    margin-top: 5px;
 }
 
 .divisao-5{
@@ -300,7 +334,7 @@
 }
 
 .mapa{
-    width: 50%;
+    width: 33%;
     right: 10%;
     position: absolute;
 }
@@ -320,12 +354,13 @@
 .titulo-ivm{
     font-family: 'VotorantimSansBlack';
     color: #fff;
-    font-size:  34px;
+    font-size:  44px;
     text-transform: uppercase;
 }
 
 .indice{
     padding-top: 40px;
+    padding-bottom: 100px;
 }
 
 .municipios{
@@ -351,6 +386,7 @@
     margin-top: 30px;
     font-family: 'VotorantimSansRegular';
     color: #0000be;
+    text-transform: none!important;
     font-weight: bold;
     font-size: 16px;
 }
