--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -466,7 +466,7 @@ h3,
 		margin-bottom: 23px
 	}
 	.header_area .navbar {
-		background: #412fb3
+		background: #0100be;
 	}
 	.navbar-toggler[aria-expanded="false"] span:nth-child(2) {
 		opacity: 1
