--- a/public/site/css/main.css
+++ b/public/site/css/main.css
@@ -493,8 +493,17 @@
     font-size: 15pt;
 }
 
+.slide-mobile{
+    display: none!important;
+}
 
 @media screen and (max-width: 480px) and (min-width: 320px) {
+    .slide-mobile{
+        display: block!important;
+    }
+    .slide-pc{
+        display: none!important;
+    }
     .mobile-w{
        width:100%!important;
     }
