--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -180,7 +180,7 @@ h3,
 }
 
 .header_area .navbar-brand {
-	margin-right: 30px
+	/* margin-right: 30px */
 }
 
 .header_area .navbar-social {
@@ -226,7 +226,6 @@ h3,
 }
 
 .header_area .navbar .nav .nav-item {
-	margin-right: 30px
 }
 
 .header_area .navbar .nav .nav-item .nav-link {
